stylesheets/app
/*
SassC::SyntaxError: Error: File to import not found or unreadable: foundation/functions.
        on line 13:1 of source/stylesheets/_settings.scss
        from line 1:1 of source/stylesheets/_foundation_with_settings.scss
        from line 3:1 of source/stylesheets/app.sass
>> @import "foundation/functions";

   ^


Backtrace:
/Users/leo/programs/projects/sql-joins-app/source/stylesheets/_settings.scss:13
/Users/leo/.rvm/gems/ruby-2.6.3/gems/sassc-2.2.1/lib/sassc/engine.rb:49:in `render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/renderers/sass.rb:68:in `evaluate'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/tilt-2.0.10/lib/tilt/template.rb:109:in `render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/file_renderer.rb:79:in `render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/template_renderer.rb:184:in `_render_with_all_renderers'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/template_renderer.rb:147:in `block in render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/activesupport-5.0.7.2/lib/active_support/notifications.rb:166:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/util.rb:21:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/template_renderer.rb:146:in `render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/sitemap/resource.rb:154:in `render'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/rack.rb:112:in `process_request'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/rack.rb:66:in `block in call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/rack.rb:65:in `catch'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/rack.rb:65:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/urlmap.rb:68:in `block in call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/urlmap.rb:53:in `each'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/urlmap.rb:53:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/extensions/minify_javascript.rb:55:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/extensions/minify_css.rb:63:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/htmlcompressor-0.2.0/lib/htmlcompressor/rack.rb:36:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-autoprefixer-2.10.1/lib/middleman-autoprefixer/extension.rb:55:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/core_extensions/inline_url_rewriter.rb:74:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/head.rb:12:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/lint.rb:49:in `_call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/lint.rb:37:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/builder.rb:153:in `call'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/mock.rb:74:in `request'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/rack-2.0.7/lib/rack/mock.rb:56:in `get'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:232:in `block in output_resource'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/activesupport-5.0.7.2/lib/active_support/notifications.rb:166:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/util.rb:21:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:225:in `output_resource'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:139:in `map'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:139:in `output_resources'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:131:in `output_files'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:71:in `block in run!'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/activesupport-5.0.7.2/lib/active_support/notifications.rb:166:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/util.rb:21:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/builder.rb:70:in `run!'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_reference.rb:43:in `send_to'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/call_with.rb:76:in `call_with'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/contracts-0.13.0/lib/contracts/method_handler.rb:138:in `block in redefine_method'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-cli-4.2.1/lib/middleman-cli/build.rb:80:in `block in build'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/activesupport-5.0.7.2/lib/active_support/notifications.rb:166:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-core-4.2.1/lib/middleman-core/util.rb:21:in `instrument'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-cli-4.2.1/lib/middleman-cli/build.rb:79:in `build'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/command.rb:27:in `run'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:126:in `invoke_command'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:133:in `block in invoke_all'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:133:in `each'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:133:in `map'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:133:in `invoke_all'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/group.rb:232:in `dispatch'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:115:in `invoke'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor.rb:40:in `block in register'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/command.rb:27:in `run'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/invocation.rb:126:in `invoke_command'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor.rb:387:in `dispatch'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/thor-0.20.3/lib/thor/base.rb:466:in `start'
/Users/leo/.rvm/gems/ruby-2.6.3/gems/middleman-cli-4.2.1/bin/middleman:70:in `<top (required)>'
/Users/leo/.rvm/gems/ruby-2.6.3/bin/middleman:23:in `load'
/Users/leo/.rvm/gems/ruby-2.6.3/bin/middleman:23:in `<main>'
/Users/leo/.rvm/gems/ruby-2.6.3/bin/ruby_executable_hooks:24:in `eval'
/Users/leo/.rvm/gems/ruby-2.6.3/bin/ruby_executable_hooks:24:in `<main>'
*/
body:before {
  white-space: pre;
  font-family: monospace;
  content: "SassC::SyntaxError: Error: File to import not found or unreadable: foundation/functions.\A         on line 13:1 of source/stylesheets/_settings.scss\A         from line 1:1 of source/stylesheets/_foundation_with_settings.scss\A         from line 3:1 of source/stylesheets/app.sass\A >> @import \"foundation/functions\";\A \A    ^\A "; }
